# SchoolPractices

./: .gitignore  package-lock.json  package.json  s=container  webpack.config.js
C/: Practice 10 (Mayor de edad).c  Practice 15 (Continue).c  Practice 16 (Calculadora).c  Practice 2 (Suma).c  Practice 20 (Triangulos).c  Practice 26 (Numero mayor).c  Practice 27 (Peso de numeros).c  Practice 4 (Multiplicación).c  Practice 9 (Variable condicional).c
C++/: Practice 1 (Clases).cpp  Practice 2 (LogicHeader).cpp
C/Practice 31/tests/: CMakeLists.txt  test_ClassActivities.c
Css/: Practice 10 (Responsive-Menu).css  Practice 13 (Tables).css  Practice 19 (AnimationName).css  Practice 21 (Game).css  Practice 25 (NeuronalLink).css  Practice 28 (LandingPage).css  Practice 5 (CanvasPlatzi).css  Practice 6 (Boton).css  Practice 8 (TecladoCanvas).css
Headers/: Practice 1 (Header).h
Html/: Practice 1.html  Practice 11 (CanvasPlatzi).html  Practice 14 (TecladoCanvas).html  Practice 15 (Responsive).html  Practice 16 (MediaQueries-Responsive).html  Practice 19 (iFrame).html  Practice 21 (DraggableIMG).html  Practice 24 (AnimationName).html  Practice 28 (BGEffect).html  Practice 29 (Glass).html  Practice 30 (NeuronalLink).html  Practice 32 (TablesPlugin).html  Practice 33 (MenuSticky).html  Practice 35 (FullPageJS).html  Practice 37 (Navbar-Side Profile).html  Practice 38 (Fetch).html  Practice 4.html  Practice 6 (FormRegister).html  Practice 9 (Canvas).html
JSON/: rules.json
Java/: Arreglo.java  JFreeChartTest.java  Menu.form  Menu.java  Practice_1_WhileDo.java  Principal.java  (+4 more)
(+343 files in other folders)
